[gd_scene load_steps=3 format=3 uid="uid://pf3t2vk7fmn"]

[ext_resource type="Script" uid="uid://b2f50dwn2r8w2" path="res://src/ConveyorAttachment/side_guards_assembly.gd" id="1_rsl22"]
[ext_resource type="PackedScene" uid="uid://dvjrx5crpqs5f" path="res://parts/SideGuard.tscn" id="2_gw8aj"]

[node name="SideGuardsAssembly" type="Node3D"]
script = ExtResource("1_rsl22")

[node name="LeftSide" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="SideGuard" parent="LeftSide" instance=ExtResource("2_gw8aj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 1)
length = 4.0

[node name="RightSide" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="SideGuard" parent="RightSide" instance=ExtResource("2_gw8aj")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, 0, -0.25, -1)
length = 4.0
